Fix image overlapping top navbar on very small screens

--- a/styles.css
+++ b/styles.css
@@ -128,7 +128,8 @@ svg {
 
 
 main {
-    margin-top: -10%;
+    height: 100%;
+    margin-top: 8%;
 }
 
 .img-wrap {
